packages/svelte/tests/compiler-errors/samples/unclosed-attribute-self-close-tag/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'unclosed-attribute-value',
		message: 'Expected closing } character',
		position: [19, 19]
	}
});
